fix border of container hobbie imgs and now try fix problem somenone imgs on carrousel is a lot behind

--- a/my-web-site/src/app/components/apresentacao-caroussel/apresentacao-caroussel.component.css
+++ b/my-web-site/src/app/components/apresentacao-caroussel/apresentacao-caroussel.component.css
@@ -5,4 +5,6 @@
     padding-top: 5vh;
   }
   
-  
+  .card .card-body {
+    max-width: 64vw;
+  }
